Upgrade Java 17
Issue-ID: POLICY-4803
Change-Id: Iad0d08ee6f8ab18eb177b458d8edbba4002bcc73
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>