@@ -22,19 +22,19 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>org.onap.policy.parent</groupId>
         <artifactId>integration</artifactId>
-        <version>4.0.0-SNAPSHOT</version>
-        <relativePath />
+        <version>4.0.1-SNAPSHOT</version>
+        <relativePath/>
     </parent>
 
     <groupId>org.onap.policy.distribution</groupId>
     <artifactId>policy-distribution</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.1-SNAPSHOT</version>
 
     <packaging>pom</packaging>
 
@@ -45,8 +45,11 @@
         <!-- Default Sonar configuration -->
         <jacoco.dataFile>${project.basedir}/../target/code-coverage/jacoco-ut.exec</jacoco.dataFile>
 
-        <policy.common.version>2.0.0-SNAPSHOT</policy.common.version>
-        <policy.models.version>3.0.0-SNAPSHOT</policy.models.version>
+        <policy.common.version>2.0.1-SNAPSHOT</policy.common.version>
+        <policy.models.version>3.0.1-SNAPSHOT</policy.models.version>
+        <surefireArgLine>
+            --add-opens java.base/java.lang=ALL-UNNAMED
+        </surefireArgLine>
     </properties>
 
     <modules>
@@ -61,8 +64,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -72,7 +75,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
